crates/syntax/src/grammar/snapshots/scad_syntax__grammar__expressions__tests__basic_list_comprehension.snap
---
source: crates/syntax/src/grammar/expressions.rs
description: "expr([for(i = vector) i])"
---
Node(
    LIST_COMPREHENSION_EXPR@0..19
      L_BRACKET@0..1 "["
      FOR_CLAUSE@1..18
        FOR_KW@1..4 "for"
        L_PAREN@4..5 "("
        ASSIGNMENTS@5..15
          ASSIGNMENT@5..15
            IDENT@5..6 "i"
            WHITESPACE@6..7 " "
            EQUALS@7..8 "="
            LOOKUP_EXPR@8..15
              WHITESPACE@8..9 " "
              IDENT@9..15 "vector"
        R_PAREN@15..16 ")"
        LOOKUP_EXPR@16..18
          WHITESPACE@16..17 " "
          IDENT@17..18 "i"
      R_BRACKET@18..19 "]"
    ,
)
