crates/syntax/src/grammar/snapshots/scad_syntax__grammar__expressions__tests__expr_add_and_mul_with_precedence.snap
---
source: crates/syntax/src/grammar/expressions.rs
description: expr(1 + 2*2)
---
Node(
    BIN_EXPR@0..7
      INTEGER@0..1
        INTEGER@0..1 "1"
      PLUS@1..3
        WHITESPACE@1..2 " "
        PLUS@2..3 "+"
      BIN_EXPR@3..7
        INTEGER@3..5
          WHITESPACE@3..4 " "
          INTEGER@4..5 "2"
        STAR@5..6
          STAR@5..6 "*"
        INTEGER@6..7
          INTEGER@6..7 "2"
    ,
)
