crates/syntax/src/grammar/snapshots/scad_syntax__grammar__expressions__tests__expr_mul.snap
---
source: crates/syntax/src/grammar/expressions.rs
description: expr(1 * 1)
---
Node(
    BIN_EXPR@0..3
      INTEGER@0..1
        INTEGER@0..1 "1"
      STAR@1..2
        STAR@1..2 "*"
      INTEGER@2..3
        INTEGER@2..3 "1"
    ,
)
