crates/syntax/src/grammar/snapshots/scad_syntax__grammar__expressions__tests__expr_sub.snap
---
source: crates/syntax/src/grammar/expressions.rs
description: expr(1 - 1)
---
Node(
    BIN_EXPR@0..5
      INTEGER@0..1
        INTEGER@0..1 "1"
      MINUS@1..3
        WHITESPACE@1..2 " "
        MINUS@2..3 "-"
      INTEGER@3..5
        WHITESPACE@3..4 " "
        INTEGER@4..5 "1"
    ,
)
