crates/syntax/src/grammar/snapshots/scad_syntax__grammar__expressions__tests__false_expr.snap
---
source: crates/syntax/src/grammar/expressions.rs
description: expr(false)
---
Token(
    FALSE_KW@0..5 "false",
)
